# Ghost-Chat

./: .gitignore  main.py  pyproject.toml
backend/: .gitignore  run.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/routes/: auth.py  chat.py  session.py  setting.py  user.py  ws_chat.py
backend/app/core/: config.py  security.py  user_settings.py  ws_settings.py
backend/app/crud/: chat.py
backend/app/db/: session.py
backend/app/models/: chat.py  session.py  settings.py  user.py
backend/app/schemas/: chat.py  session.py  settings.py  token.py  user.py
